[package]
name = "rustpython-compiler-core"
version = "0.1.2"
description = "Compiler for python code into bytecode for the rustpython VM."
authors = ["RustPython Team"]
repository = "https://github.com/RustPython/RustPython"
license = "MIT"
edition = "2018"

[features]
std = ["rustpython-bytecode/std"]
default = ["std"]

[dependencies]
indexmap = "1.0"
itertools = "0.9"
rustpython-bytecode = { path = "../bytecode", version = "0.1.1", default-features = false }
rustpython-ast = { path = "../ast" }
num-complex = { version = "0.3", default-features = false }
log = "0.4"
scopeguard = { version = "1.1", default-features = false }
rustc-hash = { version = "1.1", default-features = false }

[dev-dependencies]
rustpython-parser = { path = "../parser" }
insta = "1.1"
