[package]
name = "rustpython-parser"
version = "0.1.2"
description = "Parser for python code."
authors = [ "RustPython Team" ]
build = "build.rs"
repository = "https://github.com/RustPython/RustPython"
license = "MIT"
edition = "2018"

[features]
std = []
default = ["std", "lalrpop-util/std"]

[build-dependencies]
lalrpop = { version = "0.19", git = "https://github.com/coolreader18/lalrpop", branch = "no_std" }

[dependencies]
rustpython-ast = { path = "../ast" }
lalrpop-util = { version = "0.19.1", git = "https://github.com/coolreader18/lalrpop", branch = "no_std", default-features = false }
log = "0.4.1"
num-bigint = "0.3"
num-traits = "0.2"
unic-emoji-char = "0.9"
unic-ucd-ident  = "0.9"
unicode_names2 = "0.4"
phf = { version = "0.8", features = ["macros"] }
hashbrown = "0.9"
rustc-hash = { version = "1.1", default-features = false }
